5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4123/executions/1800_2572.log
== TEST (2019-06-06 11:30:10) 
-- CODE:
from numpy import*
vet = array(eval(input()))
g2 = ""
for x in vet:
	if x%2!=0:
		g2 += x
print(g2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:33:02) 
-- CODE:
from numpy import*
vet = array(eval(input()))
n = 0
g2 = ""
for x in vet:
	if x%2!=0:
		n += 1
nvet = zeros(n, dtype = int)
j = 0
for x in vet:
	if if x%2!=0:
		nvet[j] = x
		j+=1
print(nvet)
-- ERROR:
File "XXXX", line 11
    if if x%2!=0:
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:33:11) 
-- CODE:
from numpy import*
vet = array(eval(input()))
n = 0
g2 = ""
for x in vet:
	if x%2!=0:
		n += 1
nvet = zeros(n, dtype = int)
j = 0
for x in vet:
	if x%2!=0:
		nvet[j] = x
		j+=1
print(nvet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 11:33:29) 
-- CODE:
from numpy import*
vet = array(eval(input()))
n = 0
g2 = ""
for x in vet:
	if x%2!=0:
		n += 1
nvet = zeros(n, dtype = int)
j = 0
for x in vet:
	if x%2!=0:
		nvet[j] = x
		j+=1
print(nvet)
-- EXECUTION TIME:
1.04912
-- TEST CASE 1:
---- input:
[75247561,76546316,75713658,97135671,70356874]
---- correct output:
[75247561 97135671]
---- user output:
[75247561 97135671]
-- TEST CASE 2:
---- input:
[13017594,57417542,85024758,12475981,75942785,91875987,29584192,85794217]
---- correct output:
[12475981 75942785 91875987 85794217]
---- user output:
[12475981 75942785 91875987 85794217]
-- TEST CASE 3:
---- input:
[31874903,74902746,23742046]
---- correct output:
[31874903]
---- user output:
[31874903]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
